[package]
name = "cloudflare-dyndns-rs"
version = "0.2.0"
authors = ["Magnus Bergmark <magnus.bergmark@gmail.com>"]
edition = "2018"

[dependencies]
cloudflare = "0.10.1"
dotenv = "0.15.0"
regex = "1.8.4"
reqwest = { version = "0.11.18", features = ["blocking"] }

[dependencies.clap]
version = "4.3.3"
default_features = false
# Add "derive" + "env", and remove "color"
features = ["derive", "env", "error-context", "help", "std", "suggestions", "usage"]
